<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/classNameEdittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="16dp"
        android:background="@drawable/edit_text_bg"
        android:hint="Enter Class Name"
        android:inputType="text"
        android:fontFamily="@font/relay_noto_sans_semibold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/className" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startTimeButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Start Time"
        android:textColor="@color/black"
        android:clipToOutline="true"
        android:background="@drawable/pflogoutbtn_bg"
        app:layout_constraintEnd_toStartOf="@id/endTimeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classTime" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/endTimeButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="End Time"
        android:textColor="@color/black"
        android:clipToOutline="true"
        android:background="@drawable/pflogoutbtn_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/startTimeButton"
        app:layout_constraintTop_toBottomOf="@+id/classTime" />

    <LinearLayout
        android:id="@+id/weekdaysCheckboxLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/endTimeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:weightSum="5">

        <CheckBox
            android:id="@+id/mondayCheckbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Mon"
            android:textSize="12sp"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/tuesdayCheckbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Tue"
            android:textSize="12sp"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/wednesdayCheckbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Wed"
            android:textSize="12sp"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/thursdayCheckbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Thu"
            android:textSize="12sp"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/fridayCheckbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Fri"
            android:textSize="12sp"
            android:layout_weight="1"/>

    </LinearLayout>

    <EditText
        android:id="@+id/classTimeEdittext"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="ex) FRI 1500-1600"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labSession" />

    <EditText
        android:id="@+id/codeEdittext"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="Enter Class Code"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classCode" />

    <EditText
        android:id="@+id/buildingNumberEdittext"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="Enter Building Number"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bldgNum" />

    <EditText
        android:id="@+id/roomNumberEditText"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="Enter Room Number"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roomNum" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createButton"
        style="@style/SmallFont"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/join_btn_bg"
        android:clipToOutline="true"
        android:text="Create"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomNumberEditText" />

    <TextView
        android:id="@+id/className"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Class Name"
        android:fontFamily="@font/relay_noto_sans_bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/classTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Class Time"
        style="@style/SmallFont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classNameEdittext" />

    <TextView
        android:id="@+id/labSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="Lab Session"
        style="@style/SmallFont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weekdaysCheckboxLayout" />

    <TextView
        android:id="@+id/classCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="Class Code"
        style="@style/SmallFont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classTimeEdittext" />

    <TextView
        android:id="@+id/bldgNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="Building Number"
        style="@style/SmallFont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codeEdittext" />

    <TextView
        android:id="@+id/roomNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="Room Number"
        style="@style/SmallFont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buildingNumberEdittext" />

</androidx.constraintlayout.widget.ConstraintLayout>