...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:id="@+id/dialog_create" >

    <TextView
        android:id="@+id/className"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
...
