<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.classui.chats.ChatFragment"
    android:id="@+id/fragment_chat" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/chatui"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/appbar_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:src="@drawable/back"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/className"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="className"
            style="@style/SemiBold"
            android:layout_gravity="center"
            tools:ignore="HardcodedText" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/attendanceButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:src="@drawable/attendance_btn"
            android:layout_gravity="end" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chatui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:maxHeight="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/chatbox_bg"
        >

        <EditText
            android:id="@+id/chatText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="@style/Medium"
            android:background="@null"
            android:scrollbars="vertical"
            android:gravity="center_vertical"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:hint="Write your messages..."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/chatSendButton"
            tools:ignore="HardcodedText" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/chatSendButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#FFFFFF"
            android:src="@drawable/send" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>