<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.classui.chats.ChatCommentFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatMessage"
        app:layout_constraintBottom_toTopOf="@id/commentui"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/appbar_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:src="@drawable/back"
            android:layout_gravity="start"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/commentui"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:maxHeight="150dp"
        android:background="@drawable/chatbox_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/commentText"
            style="@style/Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scrollbars="vertical"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="Write your comments..."
            android:inputType="textMultiLine"
            android:maxLines="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/commentSendButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/commentSendButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:src="@drawable/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/chatMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="TextView"
        android:background="@drawable/chat_bg"
        android:textColor="@color/black"
        style="@style/Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>